new like functionality fix for dreams